fixed flex style attribute wrap

--- a/homepage/components/nav-link/style.css
+++ b/homepage/components/nav-link/style.css
@@ -43,6 +43,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 .nav-link > a{
